# tuya-mcu-simulator-assistant

./: .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-installers.yml  ci.yml
docs/: javascript-timer-script-guide.en.md  javascript-timer-script-guide.md  software-update-release-guide.en.md  software-update-release-guide.md  tuya-mcu-simulator-development-guide.en.md  tuya-mcu-simulator-development-guide.md
scripts/: check-public-content.mjs  generate-latest-json.mjs  set-version.mjs  verify-version.mjs
src/: App.tsx  constants.ts  i18n.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dp_schema.rs  dp_simulator.rs  language.rs  lib.rs  main.rs  mcu_ota.rs  serial_runtime.rs  timer_script.rs  trigger_rules.rs  tuya_protocol.rs
src/components/: AppHeader.tsx  ConnectionToolbar.tsx  ErrorBanner.tsx
src/features/dp/: DpEditors.tsx  DpPanel.tsx  DpSelect.tsx  dp-utils.ts
src/features/logs/: LogPanel.tsx
src/features/ota/: McuOtaModal.tsx  types.ts  useMcuOta.ts
src/features/settings/: CloseBehaviorModal.tsx  LanguageSettingsModal.tsx  RelatedCommandsModal.tsx  settings-config.ts
src/features/timer/: LocalMonacoEditor.tsx  ScriptImportConfirmModal.tsx  ScriptTaskEditor.tsx  TimerReportModal.tsx  timer-utils.ts  types.ts  useTimerTasks.ts
src/features/trigger/: TriggerReportModal.tsx  trigger-utils.ts  types.ts  useTriggerRules.ts
src/features/updater/: UpdateModal.tsx  types.ts  useAppUpdater.ts
src/types/: index.ts
src/utils/: log-utils.ts
