[package]
name = "tuya-mcu-simulator-assistant"
version = "0.1.3"
description = "Cross-platform assistant for simulating a Tuya-compatible MCU over serial"
license = "MIT"
repository = "https://github.com/dbdb8/tuya-mcu-simulator-assistant"
edition = "2021"

[lib]
name = "tuya_mcu_simulator_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
serialport = "4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.6.0", features = [] }
tauri-plugin-dialog = "2.3.0"
tauri-plugin-fs = "2.4.0"
thiserror = "1.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2.5.4"
